<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/mainwallpaper" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvPlayerOneDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="42dp"
            android:text="@string/tvPlayerOneDisplay"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPlayerTwoDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="40dp"
            android:text="@string/tvPlayerTwoDisplay"
            android:textColor="#ffffff"
            android:textSize="20sp" />
              
	</RelativeLayout>
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvPlayerOneTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="37dp"
            android:text="@string/tvPlayerOneTotal"
            android:textColor="#ffffff"
            android:textSize="65sp" />
        
          <Button
            android:id="@+id/btnPlayerOnePoisonTotal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnPlayerOnePoisonTotal"
            android:textColor="@android:color/holo_green_light"
            android:background="@android:color/transparent"
            android:textSize="29sp"
            android:layout_marginLeft="0dp"
            android:layout_centerVertical="true"
            android:gravity="center" /> 
        
        <TextView
            android:id="@+id/tvPlayerTwoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="35dp"
            android:text="@string/tvPlayerTwoTotal"
            android:textColor="#ffffff"
            android:textSize="65sp" />
        
        <Button
            android:id="@+id/btnPlayerTwoPoisonTotal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnPlayerTwoPoisonTotal"
            android:textColor="@android:color/holo_green_light"
            android:background="@android:color/transparent"
            android:textSize="29sp"
            android:layout_marginLeft="230dp"
            android:layout_centerVertical="true"
            android:gravity="center" />
   
	</RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="20sp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnPlayerOneAddOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bPlayerOneAddOne"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnPlayerOneMinusOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bPlayerOneMinusOne"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnPlayerTwoAddFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bPlayerTwoAddFive"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnPlayerTwoMinusFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bPlayerTwoMinusFive"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnPlayerOneAddFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bPlayerOneAddFive"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnPlayerOneMinusFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bPlayerOneMinusFive"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/linearLayout1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnPlayerTwoAddOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bPlayerTwoAddOne"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnPlayerTwoMinusOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bPlayerTwoMinusOne"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>
      

    <!-- Coin Flip Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:gravity="center" >
        
    	<ImageButton 
    	    android:id="@+id/ibDice2" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" 
    	    android:background="@android:color/transparent"
    	    android:src="@drawable/d2" />
    	
    	<ImageButton 
    	    android:id="@+id/ibDice20" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" 
    	    android:background="@android:color/transparent"
    	    android:src="@drawable/d20" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:gravity="center" >

        <TextView
            android:id="@+id/tvDice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"        
            android:text="@string/tvDice2"
            android:textColor="#ffffff"
            android:textSize="40sp" />
    </LinearLayout>
    <!-- END Coin Flip Section -->
    
    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="10sp" >

	        <Button 
            android:id="@+id/btnResetTotals"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" 
            android:textColor="#ffffff"
            android:text="@string/bResetTotals"/>
	    </LinearLayout>
   
</LinearLayout>
    
</ScrollView>

